<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_persona_name" />

            <EditText
                android:id="@+id/txt_persona_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/persona_name_example"
                android:inputType="textPersonName"
                tools:text="@string/persona_name_example" />

            <TextView
                android:id="@+id/lb_persona_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_persona_age" />

            <EditText
                android:id="@+id/txt_persona_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/persona_age_example"
                android:inputType="number"
                tools:text="@string/persona_age_example" />

            <TextView
                android:id="@+id/label_persona_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_persona_occupation" />

            <EditText
                android:id="@+id/txt_persona_occupation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/persona_occupation_example"
                android:inputType="textPersonName"
                tools:text="@string/persona_occupation_example" />

            <TextView
                android:id="@+id/label_personal_physical_traces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_personal_physical_traces" />

            <EditText
                android:id="@+id/txt_physical_traces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/persona_physical_traces_example"
                android:inputType="textMultiLine"
                tools:text="@string/persona_physical_traces_example" />

            <TextView
                android:id="@+id/label_persona_personality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_persona_personality" />

            <EditText
                android:id="@+id/txt_persona_personality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/persona_personality_example"
                android:inputType="textMultiLine"
                tools:text="@string/persona_personality_example" />

            <TextView
                android:id="@+id/label_persona_biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/label_persona_biography" />

            <EditText
                android:id="@+id/txt_persona_biography"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/persona_biography_example"
                android:inputType="textMultiLine"
                tools:text="@string/persona_biography_example" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_save_persona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save_persona" />

    </LinearLayout>

</LinearLayout>